--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,6 @@
   ],
   "dependencies": {
     "Atem-Errors": "graphicore/Atem-Errors",
-    "Atem-Math-Tools": "graphicore/Atem-Math-Tools",
-    "opentype.js": ">=0.6.2"
+    "Atem-Math-Tools": "graphicore/Atem-Math-Tools"
   }
 }
